parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTBLOCK
    FUNCTION
    INTERFACE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> asignacion PUNTOCOMA
Rule 7     instruccion -> sIf
Rule 8     instruccion -> sWhile
Rule 9     instruccion -> sFor
Rule 10    instruccion -> sContinue
Rule 11    instruccion -> sBreak
Rule 12    instruccion -> sReturn
Rule 13    instruccion -> sSwitch
Rule 14    sSwitch -> SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
Rule 15    listCases -> listCases CASE op_Ternario DOSPUNTOS instrucciones
Rule 16    listCases -> listCases DEFAULT DOSPUNTOS instrucciones
Rule 17    listCases -> CASE op_Ternario DOSPUNTOS instrucciones
Rule 18    listCases -> DEFAULT DOSPUNTOS instrucciones
Rule 19    sContinue -> CONTINUE PUNTOCOMA
Rule 20    sBreak -> BREAK PUNTOCOMA
Rule 21    sReturn -> RETURN PUNTOCOMA
Rule 22    sReturn -> RETURN op_Ternario PUNTOCOMA
Rule 23    sFor -> FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
Rule 24    sWhile -> WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
Rule 25    sIf -> IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
Rule 26    sIf2 -> LLAVDER ELSE sElse
Rule 27    sIf2 -> LLAVDER
Rule 28    sElse -> LLAVIZQ instrucciones LLAVDER
Rule 29    sElse -> sIf
Rule 30    asignacion -> ID IGUAL op_Ternario
Rule 31    asignacion -> ID MAS IGUAL op_Ternario
Rule 32    asignacion -> ID MENOS IGUAL op_Ternario
Rule 33    asignacion -> ID MAS MAS
Rule 34    asignacion -> ID MENOS MENOS
Rule 35    declaracion -> tipoVar ID DOSPUNTOS tipo declaracion_explicita
Rule 36    declaracion -> tipoVar ID declaracion_implicita
Rule 37    declaracion_explicita -> PUNTOCOMA
Rule 38    declaracion_explicita -> IGUAL op_Ternario PUNTOCOMA
Rule 39    declaracion_implicita -> IGUAL op_Ternario PUNTOCOMA
Rule 40    tipoVar -> VAR
Rule 41    tipoVar -> CONST
Rule 42    tipo -> NUMBER
Rule 43    tipo -> FLOAT
Rule 44    tipo -> STRING
Rule 45    tipo -> BOOLEAN
Rule 46    tipo -> CHAR
Rule 47    imprimir_instr -> CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
Rule 48    lista_exp -> lista_exp COMA op_Ternario
Rule 49    lista_exp -> op_Ternario
Rule 50    op_Ternario -> exp_Or INTERROGACION exp_Or DOSPUNTOS exp_Or
Rule 51    op_Ternario -> exp_Or
Rule 52    exp_Or -> exp_Or OR exp_And
Rule 53    exp_Or -> exp_And
Rule 54    exp_And -> exp_And AND exp_Not
Rule 55    exp_And -> exp_Not
Rule 56    exp_Not -> lNot exp_Comp
Rule 57    exp_Not -> exp_Comp
Rule 58    lNot -> lNot NOT
Rule 59    lNot -> NOT
Rule 60    exp_Comp -> exp_Sum_Menos EQUIVALENTE exp_Sum_Menos
Rule 61    exp_Comp -> exp_Sum_Menos DISTINTO exp_Sum_Menos
Rule 62    exp_Comp -> exp_rel
Rule 63    exp_rel -> exp_Sum_Menos MAYOR exp_Sum_Menos
Rule 64    exp_rel -> exp_Sum_Menos MENOR exp_Sum_Menos
Rule 65    exp_rel -> exp_Sum_Menos MAYORIGUAL exp_Sum_Menos
Rule 66    exp_rel -> exp_Sum_Menos MENORIGUAL exp_Sum_Menos
Rule 67    exp_rel -> exp_Sum_Menos
Rule 68    exp_Sum_Menos -> exp_Sum_Menos MAS exp_Mul_Div
Rule 69    exp_Sum_Menos -> exp_Sum_Menos MENOS exp_Mul_Div
Rule 70    exp_Sum_Menos -> exp_Mul_Div
Rule 71    exp_Mul_Div -> exp_Mul_Div POR exp_Parentesis
Rule 72    exp_Mul_Div -> exp_Mul_Div DIVIDIDO exp_Parentesis
Rule 73    exp_Mul_Div -> exp_Mul_Div MODULO exp_Parentesis
Rule 74    exp_Mul_Div -> exp_Parentesis
Rule 75    exp_Parentesis -> PARIZQ exp_Or PARDER
Rule 76    exp_Parentesis -> exp_Negativo
Rule 77    exp_Negativo -> MENOS valor
Rule 78    exp_Negativo -> valor
Rule 79    valor -> ENTERO
Rule 80    valor -> CADENA
Rule 81    valor -> DECIMAL
Rule 82    valor -> CARACTER
Rule 83    valor -> TRUE
Rule 84    valor -> FALSE
Rule 85    valor -> NULL
Rule 86    valor -> ID

Terminals, with rules where they appear

AND                  : 54
BOOLEAN              : 45
BREAK                : 20
CADENA               : 80
CARACTER             : 82
CASE                 : 15 17
CHAR                 : 46
COMA                 : 48
COMMENTBLOCK         : 
CONSOLE              : 47
CONST                : 41
CONTINUE             : 19
DECIMAL              : 81
DEFAULT              : 16 18
DISTINTO             : 61
DIVIDIDO             : 72
DOSPUNTOS            : 15 16 17 18 35 50
ELSE                 : 26
ENTERO               : 79
EQUIVALENTE          : 60
FALSE                : 84
FLOAT                : 43
FOR                  : 23
FUNCTION             : 
ID                   : 30 31 32 33 34 35 36 86
IF                   : 25
IGUAL                : 30 31 32 38 39
INTERFACE            : 
INTERROGACION        : 50
LLAVDER              : 14 23 24 26 27 28
LLAVIZQ              : 14 23 24 25 28
LOG                  : 47
MAS                  : 31 33 33 68
MAYOR                : 63
MAYORIGUAL           : 65
MENOR                : 64
MENORIGUAL           : 66
MENOS                : 32 34 34 69 77
MODULO               : 73
NOT                  : 58 59
NULL                 : 85
NUMBER               : 42
OR                   : 52
PARDER               : 14 23 24 25 47 75
PARIZQ               : 14 23 24 25 47 75
POR                  : 71
PUNTO                : 47
PUNTOCOMA            : 6 19 20 21 22 23 37 38 39 47
RETURN               : 21 22
STRING               : 44
SWITCH               : 14
TRUE                 : 83
VAR                  : 40
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

asignacion           : 6 23
declaracion          : 5 23
declaracion_explicita : 35
declaracion_implicita : 36
exp_And              : 52 53 54
exp_Comp             : 56 57
exp_Mul_Div          : 68 69 70 71 72 73
exp_Negativo         : 76
exp_Not              : 54 55
exp_Or               : 50 50 50 51 52 75
exp_Parentesis       : 71 72 73 74
exp_Sum_Menos        : 60 60 61 61 63 63 64 64 65 65 66 66 67 68 69
exp_rel              : 62
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 15 16 17 18 23 24 25 28
lNot                 : 56 58
listCases            : 14 15 16
lista_exp            : 47 48
op_Ternario          : 14 15 17 22 23 24 25 30 31 32 38 39 48 49
sBreak               : 11
sContinue            : 10
sElse                : 26
sFor                 : 9
sIf                  : 7 29
sIf2                 : 25
sReturn              : 12
sSwitch              : 13
sWhile               : 8
tipo                 : 35
tipoVar              : 35 36
valor                : 77 78

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . sIf
    (8) instruccion -> . sWhile
    (9) instruccion -> . sFor
    (10) instruccion -> . sContinue
    (11) instruccion -> . sBreak
    (12) instruccion -> . sReturn
    (13) instruccion -> . sSwitch
    (47) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
    (35) declaracion -> . tipoVar ID DOSPUNTOS tipo declaracion_explicita
    (36) declaracion -> . tipoVar ID declaracion_implicita
    (30) asignacion -> . ID IGUAL op_Ternario
    (31) asignacion -> . ID MAS IGUAL op_Ternario
    (32) asignacion -> . ID MENOS IGUAL op_Ternario
    (33) asignacion -> . ID MAS MAS
    (34) asignacion -> . ID MENOS MENOS
    (25) sIf -> . IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
    (24) sWhile -> . WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
    (23) sFor -> . FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
    (19) sContinue -> . CONTINUE PUNTOCOMA
    (20) sBreak -> . BREAK PUNTOCOMA
    (21) sReturn -> . RETURN PUNTOCOMA
    (22) sReturn -> . RETURN op_Ternario PUNTOCOMA
    (14) sSwitch -> . SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
    (40) tipoVar -> . VAR
    (41) tipoVar -> . CONST

    CONSOLE         shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    CONTINUE        shift and go to state 20
    BREAK           shift and go to state 21
    RETURN          shift and go to state 22
    SWITCH          shift and go to state 23
    VAR             shift and go to state 24
    CONST           shift and go to state 25

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sIf                            shift and go to state 7
    sWhile                         shift and go to state 8
    sFor                           shift and go to state 9
    sContinue                      shift and go to state 10
    sBreak                         shift and go to state 11
    sReturn                        shift and go to state 12
    sSwitch                        shift and go to state 13
    tipoVar                        shift and go to state 15

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . sIf
    (8) instruccion -> . sWhile
    (9) instruccion -> . sFor
    (10) instruccion -> . sContinue
    (11) instruccion -> . sBreak
    (12) instruccion -> . sReturn
    (13) instruccion -> . sSwitch
    (47) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
    (35) declaracion -> . tipoVar ID DOSPUNTOS tipo declaracion_explicita
    (36) declaracion -> . tipoVar ID declaracion_implicita
    (30) asignacion -> . ID IGUAL op_Ternario
    (31) asignacion -> . ID MAS IGUAL op_Ternario
    (32) asignacion -> . ID MENOS IGUAL op_Ternario
    (33) asignacion -> . ID MAS MAS
    (34) asignacion -> . ID MENOS MENOS
    (25) sIf -> . IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
    (24) sWhile -> . WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
    (23) sFor -> . FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
    (19) sContinue -> . CONTINUE PUNTOCOMA
    (20) sBreak -> . BREAK PUNTOCOMA
    (21) sReturn -> . RETURN PUNTOCOMA
    (22) sReturn -> . RETURN op_Ternario PUNTOCOMA
    (14) sSwitch -> . SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
    (40) tipoVar -> . VAR
    (41) tipoVar -> . CONST

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    CONTINUE        shift and go to state 20
    BREAK           shift and go to state 21
    RETURN          shift and go to state 22
    SWITCH          shift and go to state 23
    VAR             shift and go to state 24
    CONST           shift and go to state 25

    instruccion                    shift and go to state 26
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sIf                            shift and go to state 7
    sWhile                         shift and go to state 8
    sFor                           shift and go to state 9
    sContinue                      shift and go to state 10
    sBreak                         shift and go to state 11
    sReturn                        shift and go to state 12
    sSwitch                        shift and go to state 13
    tipoVar                        shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    CONST           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    CONSOLE         reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    WHILE           reduce using rule 4 (instruccion -> imprimir_instr .)
    FOR             reduce using rule 4 (instruccion -> imprimir_instr .)
    CONTINUE        reduce using rule 4 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 4 (instruccion -> imprimir_instr .)
    RETURN          reduce using rule 4 (instruccion -> imprimir_instr .)
    SWITCH          reduce using rule 4 (instruccion -> imprimir_instr .)
    VAR             reduce using rule 4 (instruccion -> imprimir_instr .)
    CONST           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)
    CASE            reduce using rule 4 (instruccion -> imprimir_instr .)
    DEFAULT         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    IF              reduce using rule 5 (instruccion -> declaracion .)
    WHILE           reduce using rule 5 (instruccion -> declaracion .)
    FOR             reduce using rule 5 (instruccion -> declaracion .)
    CONTINUE        reduce using rule 5 (instruccion -> declaracion .)
    BREAK           reduce using rule 5 (instruccion -> declaracion .)
    RETURN          reduce using rule 5 (instruccion -> declaracion .)
    SWITCH          reduce using rule 5 (instruccion -> declaracion .)
    VAR             reduce using rule 5 (instruccion -> declaracion .)
    CONST           reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)
    LLAVDER         reduce using rule 5 (instruccion -> declaracion .)
    CASE            reduce using rule 5 (instruccion -> declaracion .)
    DEFAULT         reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 27


state 7

    (7) instruccion -> sIf .

    CONSOLE         reduce using rule 7 (instruccion -> sIf .)
    ID              reduce using rule 7 (instruccion -> sIf .)
    IF              reduce using rule 7 (instruccion -> sIf .)
    WHILE           reduce using rule 7 (instruccion -> sIf .)
    FOR             reduce using rule 7 (instruccion -> sIf .)
    CONTINUE        reduce using rule 7 (instruccion -> sIf .)
    BREAK           reduce using rule 7 (instruccion -> sIf .)
    RETURN          reduce using rule 7 (instruccion -> sIf .)
    SWITCH          reduce using rule 7 (instruccion -> sIf .)
    VAR             reduce using rule 7 (instruccion -> sIf .)
    CONST           reduce using rule 7 (instruccion -> sIf .)
    $end            reduce using rule 7 (instruccion -> sIf .)
    LLAVDER         reduce using rule 7 (instruccion -> sIf .)
    CASE            reduce using rule 7 (instruccion -> sIf .)
    DEFAULT         reduce using rule 7 (instruccion -> sIf .)


state 8

    (8) instruccion -> sWhile .

    CONSOLE         reduce using rule 8 (instruccion -> sWhile .)
    ID              reduce using rule 8 (instruccion -> sWhile .)
    IF              reduce using rule 8 (instruccion -> sWhile .)
    WHILE           reduce using rule 8 (instruccion -> sWhile .)
    FOR             reduce using rule 8 (instruccion -> sWhile .)
    CONTINUE        reduce using rule 8 (instruccion -> sWhile .)
    BREAK           reduce using rule 8 (instruccion -> sWhile .)
    RETURN          reduce using rule 8 (instruccion -> sWhile .)
    SWITCH          reduce using rule 8 (instruccion -> sWhile .)
    VAR             reduce using rule 8 (instruccion -> sWhile .)
    CONST           reduce using rule 8 (instruccion -> sWhile .)
    $end            reduce using rule 8 (instruccion -> sWhile .)
    LLAVDER         reduce using rule 8 (instruccion -> sWhile .)
    CASE            reduce using rule 8 (instruccion -> sWhile .)
    DEFAULT         reduce using rule 8 (instruccion -> sWhile .)


state 9

    (9) instruccion -> sFor .

    CONSOLE         reduce using rule 9 (instruccion -> sFor .)
    ID              reduce using rule 9 (instruccion -> sFor .)
    IF              reduce using rule 9 (instruccion -> sFor .)
    WHILE           reduce using rule 9 (instruccion -> sFor .)
    FOR             reduce using rule 9 (instruccion -> sFor .)
    CONTINUE        reduce using rule 9 (instruccion -> sFor .)
    BREAK           reduce using rule 9 (instruccion -> sFor .)
    RETURN          reduce using rule 9 (instruccion -> sFor .)
    SWITCH          reduce using rule 9 (instruccion -> sFor .)
    VAR             reduce using rule 9 (instruccion -> sFor .)
    CONST           reduce using rule 9 (instruccion -> sFor .)
    $end            reduce using rule 9 (instruccion -> sFor .)
    LLAVDER         reduce using rule 9 (instruccion -> sFor .)
    CASE            reduce using rule 9 (instruccion -> sFor .)
    DEFAULT         reduce using rule 9 (instruccion -> sFor .)


state 10

    (10) instruccion -> sContinue .

    CONSOLE         reduce using rule 10 (instruccion -> sContinue .)
    ID              reduce using rule 10 (instruccion -> sContinue .)
    IF              reduce using rule 10 (instruccion -> sContinue .)
    WHILE           reduce using rule 10 (instruccion -> sContinue .)
    FOR             reduce using rule 10 (instruccion -> sContinue .)
    CONTINUE        reduce using rule 10 (instruccion -> sContinue .)
    BREAK           reduce using rule 10 (instruccion -> sContinue .)
    RETURN          reduce using rule 10 (instruccion -> sContinue .)
    SWITCH          reduce using rule 10 (instruccion -> sContinue .)
    VAR             reduce using rule 10 (instruccion -> sContinue .)
    CONST           reduce using rule 10 (instruccion -> sContinue .)
    $end            reduce using rule 10 (instruccion -> sContinue .)
    LLAVDER         reduce using rule 10 (instruccion -> sContinue .)
    CASE            reduce using rule 10 (instruccion -> sContinue .)
    DEFAULT         reduce using rule 10 (instruccion -> sContinue .)


state 11

    (11) instruccion -> sBreak .

    CONSOLE         reduce using rule 11 (instruccion -> sBreak .)
    ID              reduce using rule 11 (instruccion -> sBreak .)
    IF              reduce using rule 11 (instruccion -> sBreak .)
    WHILE           reduce using rule 11 (instruccion -> sBreak .)
    FOR             reduce using rule 11 (instruccion -> sBreak .)
    CONTINUE        reduce using rule 11 (instruccion -> sBreak .)
    BREAK           reduce using rule 11 (instruccion -> sBreak .)
    RETURN          reduce using rule 11 (instruccion -> sBreak .)
    SWITCH          reduce using rule 11 (instruccion -> sBreak .)
    VAR             reduce using rule 11 (instruccion -> sBreak .)
    CONST           reduce using rule 11 (instruccion -> sBreak .)
    $end            reduce using rule 11 (instruccion -> sBreak .)
    LLAVDER         reduce using rule 11 (instruccion -> sBreak .)
    CASE            reduce using rule 11 (instruccion -> sBreak .)
    DEFAULT         reduce using rule 11 (instruccion -> sBreak .)


state 12

    (12) instruccion -> sReturn .

    CONSOLE         reduce using rule 12 (instruccion -> sReturn .)
    ID              reduce using rule 12 (instruccion -> sReturn .)
    IF              reduce using rule 12 (instruccion -> sReturn .)
    WHILE           reduce using rule 12 (instruccion -> sReturn .)
    FOR             reduce using rule 12 (instruccion -> sReturn .)
    CONTINUE        reduce using rule 12 (instruccion -> sReturn .)
    BREAK           reduce using rule 12 (instruccion -> sReturn .)
    RETURN          reduce using rule 12 (instruccion -> sReturn .)
    SWITCH          reduce using rule 12 (instruccion -> sReturn .)
    VAR             reduce using rule 12 (instruccion -> sReturn .)
    CONST           reduce using rule 12 (instruccion -> sReturn .)
    $end            reduce using rule 12 (instruccion -> sReturn .)
    LLAVDER         reduce using rule 12 (instruccion -> sReturn .)
    CASE            reduce using rule 12 (instruccion -> sReturn .)
    DEFAULT         reduce using rule 12 (instruccion -> sReturn .)


state 13

    (13) instruccion -> sSwitch .

    CONSOLE         reduce using rule 13 (instruccion -> sSwitch .)
    ID              reduce using rule 13 (instruccion -> sSwitch .)
    IF              reduce using rule 13 (instruccion -> sSwitch .)
    WHILE           reduce using rule 13 (instruccion -> sSwitch .)
    FOR             reduce using rule 13 (instruccion -> sSwitch .)
    CONTINUE        reduce using rule 13 (instruccion -> sSwitch .)
    BREAK           reduce using rule 13 (instruccion -> sSwitch .)
    RETURN          reduce using rule 13 (instruccion -> sSwitch .)
    SWITCH          reduce using rule 13 (instruccion -> sSwitch .)
    VAR             reduce using rule 13 (instruccion -> sSwitch .)
    CONST           reduce using rule 13 (instruccion -> sSwitch .)
    $end            reduce using rule 13 (instruccion -> sSwitch .)
    LLAVDER         reduce using rule 13 (instruccion -> sSwitch .)
    CASE            reduce using rule 13 (instruccion -> sSwitch .)
    DEFAULT         reduce using rule 13 (instruccion -> sSwitch .)


state 14

    (47) imprimir_instr -> CONSOLE . PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA

    PUNTO           shift and go to state 28


state 15

    (35) declaracion -> tipoVar . ID DOSPUNTOS tipo declaracion_explicita
    (36) declaracion -> tipoVar . ID declaracion_implicita

    ID              shift and go to state 29


state 16

    (30) asignacion -> ID . IGUAL op_Ternario
    (31) asignacion -> ID . MAS IGUAL op_Ternario
    (32) asignacion -> ID . MENOS IGUAL op_Ternario
    (33) asignacion -> ID . MAS MAS
    (34) asignacion -> ID . MENOS MENOS

    IGUAL           shift and go to state 30
    MAS             shift and go to state 31
    MENOS           shift and go to state 32


state 17

    (25) sIf -> IF . PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2

    PARIZQ          shift and go to state 33


state 18

    (24) sWhile -> WHILE . PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 34


state 19

    (23) sFor -> FOR . PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 35


state 20

    (19) sContinue -> CONTINUE . PUNTOCOMA

    PUNTOCOMA       shift and go to state 36


state 21

    (20) sBreak -> BREAK . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 22

    (21) sReturn -> RETURN . PUNTOCOMA
    (22) sReturn -> RETURN . op_Ternario PUNTOCOMA
    (50) op_Ternario -> . exp_Or INTERROGACION exp_Or DOSPUNTOS exp_Or
    (51) op_Ternario -> . exp_Or
    (52) exp_Or -> . exp_Or OR exp_And
    (53) exp_Or -> . exp_And
    (54) exp_And -> . exp_And AND exp_Not
    (55) exp_And -> . exp_Not
    (56) exp_Not -> . lNot exp_Comp
    (57) exp_Not -> . exp_Comp
    (58) lNot -> . lNot NOT
    (59) lNot -> . NOT
    (60) exp_Comp -> . exp_Sum_Menos EQUIVALENTE exp_Sum_Menos
    (61) exp_Comp -> . exp_Sum_Menos DISTINTO exp_Sum_Menos
    (62) exp_Comp -> . exp_rel
    (68) exp_Sum_Menos -> . exp_Sum_Menos MAS exp_Mul_Div
    (69) exp_Sum_Menos -> . exp_Sum_Menos MENOS exp_Mul_Div
    (70) exp_Sum_Menos -> . exp_Mul_Div
    (63) exp_rel -> . exp_Sum_Menos MAYOR exp_Sum_Menos
    (64) exp_rel -> . exp_Sum_Menos MENOR exp_Sum_Menos
    (65) exp_rel -> . exp_Sum_Menos MAYORIGUAL exp_Sum_Menos
    (66) exp_rel -> . exp_Sum_Menos MENORIGUAL exp_Sum_Menos
    (67) exp_rel -> . exp_Sum_Menos
    (71) exp_Mul_Div -> . exp_Mul_Div POR exp_Parentesis
    (72) exp_Mul_Div -> . exp_Mul_Div DIVIDIDO exp_Parentesis
    (73) exp_Mul_Div -> . exp_Mul_Div MODULO exp_Parentesis
    (74) exp_Mul_Div -> . exp_Parentesis
    (75) exp_Parentesis -> . PARIZQ exp_Or PARDER
    (76) exp_Parentesis -> . exp_Negativo
    (77) exp_Negativo -> . MENOS valor
    (78) exp_Negativo -> . valor
    (79) valor -> . ENTERO
    (80) valor -> . CADENA
    (81) valor -> . DECIMAL
    (82) valor -> . CARACTER
    (83) valor -> . TRUE
    (84) valor -> . FALSE
    (85) valor -> . NULL
    (86) valor -> . ID

    PUNTOCOMA       shift and go to state 38
    NOT             shift and go to state 45
    PARIZQ          shift and go to state 51
    MENOS           shift and go to state 49
    ENTERO          shift and go to state 54
    CADENA          shift and go to state 55
    DECIMAL         shift and go to state 56
    CARACTER        shift and go to state 57
    TRUE            shift and go to state 58
    FALSE           shift and go to state 59
    NULL            shift and go to state 60
    ID              shift and go to state 61

    op_Ternario                    shift and go to state 39
    exp_Or                         shift and go to state 40
    exp_And                        shift and go to state 41
    exp_Not                        shift and go to state 42
    lNot                           shift and go to state 43
    exp_Comp                       shift and go to state 44
    exp_Sum_Menos                  shift and go to state 46
    exp_rel                        shift and go to state 47
    exp_Mul_Div                    shift and go to state 48
    exp_Parentesis                 shift and go to state 50
    exp_Negativo                   shift and go to state 52
    valor                          shift and go to state 53

state 23

    (14) sSwitch -> SWITCH . PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER

    PARIZQ          shift and go to state 62


state 24

    (40) tipoVar -> VAR .

    ID              reduce using rule 40 (tipoVar -> VAR .)


state 25

    (41) tipoVar -> CONST .

    ID              reduce using rule 41 (tipoVar -> CONST .)


state 26

    (2) instrucciones -> instrucciones instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CONTINUE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SWITCH          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    VAR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CONST           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CASE            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DEFAULT         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 27

    (6) instruccion -> asignacion PUNTOCOMA .

    CONSOLE         reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    ID              reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    IF              reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    WHILE           reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    FOR             reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    CONTINUE        reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    BREAK           reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    RETURN          reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    SWITCH          reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    VAR             reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    CONST           reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    $end            reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    CASE            reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)
    DEFAULT         reduce using rule 6 (instruccion -> asignacion PUNTOCOMA .)


state 28

    (47) imprimir_instr -> CONSOLE PUNTO . LOG PARIZQ lista_exp PARDER PUNTOCOMA

    LOG             shift and go to state 63


state 29

    (35) declaracion -> tipoVar ID . DOSPUNTOS tipo declaracion_explicita
    (36) declaracion -> tipoVar ID . declaracion_implicita
    (39) declaracion_implicita -> . IGUAL op_Ternario PUNTOCOMA

    DOSPUNTOS       shift and go to state 64
    IGUAL           shift and go to state 66

    declaracion_implicita          shift and go to state 65

state 30
